--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -69,76 +69,76 @@ sections:
     items:
       - title: Proxmox VE
         icon: hl-proxmox
-        url: "https://pve.{{ portainer_root_domain }}/#v1:0:=node%2Fpve:4:5::::::"
+        url: "https://pve.{{ domain }}/#v1:0:=node%2Fpve:4:5::::::"
         statusCheck: true
         statusCheckUrl: https://10.12.12.100:8006
         statusCheckAllowInsecure: true
 
       - title: Passbolt
         icon: https://avatars.githubusercontent.com/u/4386228?s=200&v=4
-        url: https://passbolt.{{ portainer_root_domain }}
+        url: https://passbolt.{{ domain }}
         statusCheck: true
         statusCheckUrl: http://10.12.12.201:4080
         statusCheckAcceptCodes: "401"
 
       - title: Grafana
         icon: hl-grafana
-        url: https://grafana.{{ portainer_root_domain }}/
+        url: https://grafana.{{ domain }}/
         statusCheck: true
         statusCheckUrl: http://10.12.12.201:3000
 
       - title: Pi-Hole
         icon: hl-pi-hole
-        url: https://pihole.{{ portainer_root_domain }}/
+        url: https://pihole.{{ domain }}/
         statusCheck: true
         statusCheckUrl: http://10.12.12.101:80
         statusCheckAcceptCodes: "403"
 
       - title: Pi-Hole-2
         icon: hl-pi-hole
-        url: https://pihole-2.{{ portainer_root_domain }}/
+        url: https://pihole-2.{{ domain }}/
         statusCheck: true
         statusCheckUrl: http://10.12.12.112:80
         statusCheckAcceptCodes: "403"
 
       - title: Wireguard
         icon: hl-wireguard
-        url: https://wireguard.{{ portainer_root_domain }}/
+        url: https://wireguard.{{ domain }}/
         statusCheck: true
         statusCheckUrl: http://10.12.12.102:10086
 
       - title: Portainer
         icon: hl-portainer
-        url: https://portainer.{{ portainer_root_domain }}/#!/2/docker/containers
+        url: https://portainer.{{ domain }}/#!/2/docker/containers
         statusCheck: true
         statusCheckUrl: http://10.12.12.201:9000
 
       - title: Sonarr
-        url: https://sonarr.{{ portainer_root_domain }}/
+        url: https://sonarr.{{ domain }}/
         icon: hl-sonarr
         statusCheck: true
         statusCheckUrl: http://10.12.12.106:8989
 
       - title: Radarr
-        url: https://radarr.{{ portainer_root_domain }}/
+        url: https://radarr.{{ domain }}/
         icon: hl-radarr
         statusCheck: true
         statusCheckUrl: http://10.12.12.106:7878
 
       - title: Bazarr
-        url: https://bazarr.{{ portainer_root_domain }}/
+        url: https://bazarr.{{ domain }}/
         icon: hl-bazarr
         statusCheck: true
         statusCheckUrl: http://10.12.12.106:6767
 
       - title: Readarr
-        url: https://readarr.{{ portainer_root_domain }}/
+        url: https://readarr.{{ domain }}/
         icon: hl-readarr
         statusCheck: true
         statusCheckUrl: http://10.12.12.106:8787
 
       - title: Prowlarr
-        url: https://prowlarr.{{ portainer_root_domain }}/
+        url: https://prowlarr.{{ domain }}/
         icon: hl-prowlarr
         statusCheck: true
         statusCheckUrl: http://10.12.12.106:9696
@@ -150,7 +150,7 @@ sections:
         statusCheckUrl: http://10.12.12.106:8191
 
       - title: qBittorrent
-        url: https://torrent.{{ portainer_root_domain }}/
+        url: https://torrent.{{ domain }}/
         icon: hl-qbittorrent
         statusCheck: true
         statusCheckUrl: http://10.12.12.104:8080
@@ -169,7 +169,7 @@ sections:
 
       - title: Proxmox Backup
         icon: hl-proxmox
-        url: https://pve-backup.{{ portainer_root_domain }}/
+        url: https://pve-backup.{{ domain }}/
         statusCheck: true
         statusCheckUrl: https://10.12.12.107:8007
         statusCheckAllowInsecure: true
@@ -189,7 +189,7 @@ sections:
         url: https://calendar.google.com/
 
       - title: Portfolio
-        url: https://www.{{ portainer_root_domain }}/
+        url: https://www.{{ domain }}/
         icon: fas fa-globe
         statusCheck: true
 
@@ -202,7 +202,7 @@ sections:
         url: https://www.netflix.com/browse
 
       - title: Jellyfin
-        url: https://jellyfin.{{ portainer_root_domain }}/web/index.html#!/home.html
+        url: https://jellyfin.{{ domain }}/web/index.html#!/home.html
         icon: hl-jellyfin
         statusCheck: true
         statusCheckUrl: http://10.12.12.108:8096
@@ -213,13 +213,13 @@ sections:
 
       - title: Home Assistant
         icon: hl-home-assistant
-        url: https://ha.tbrouwer.com/
+        url: https://ha.{{ domain }}/
         statusCheck: true
         statusCheckUrl: http://10.12.12.203:8123/
 
       - title: Tandoor
         icon: hl-tandoor-recipes
-        url: https://tandoor.{{ portainer_root_domain }}/
+        url: https://tandoor.{{ domain }}/
         statusCheck: true
         statusCheckUrl: http://10.12.12.201:9080/
 
@@ -275,7 +275,7 @@ sections:
 
       - title: Stirling PDF
         icon: hl-stirling-pdf
-        url: https://stirling.{{ portainer_root_domain }}/
+        url: https://stirling.{{ domain }}/
         statusCheck: true
         statusCheckUrl: http://10.12.12.113:8080
 
@@ -339,13 +339,13 @@ sections:
         icon: hl-github-light
 
       - title: Gitea
-        url: https://gitea.{{ portainer_root_domain }}/
+        url: https://gitea.{{ domain }}/
         icon: hl-gitea
         statusCheck: true
         statusCheckUrl: http://10.12.12.109:3000
 
       - title: Wiki.js
-        url: https://wiki.tbrouwer.com/
+        url: https://wiki.{{ domain }}/
         icon: hl-wikijs
         statusCheck: true
         statusCheckUrl: http://10.12.12.110:3000
