--- a/templates/prometheus.yml.j2
+++ b/templates/prometheus.yml.j2
@@ -3,6 +3,11 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+      - targets:
+        - 'localhost:9090'
+
   - job_name: 'pve'
     static_configs:
       - targets:
