add semaphore domain + dashboard

--- a/templates/dashboard-config.yml.j2
+++ b/templates/dashboard-config.yml.j2
@@ -139,6 +139,11 @@ linkSections:
         icon: hl-home-assistant
         status: true
 
+      - title: Semaphore
+        url: https://semaphore.{{ domain }}
+        icon: hl-semaphore
+        status: true
+
       - title: Tandoor
         url: https://tandoor.{{ domain }}
         icon: hl-tandoor-recipes
