--- a/templates/prometheus.yml.j2
+++ b/templates/prometheus.yml.j2
@@ -28,11 +28,10 @@ scrape_configs:
   - job_name: 'node'
     static_configs:
       - targets:
-{% for host in groups['proxmox_lxc_running'] %}
+{% for host in groups['proxmox_accessable'] %}
         - "{{ hostvars[host]['ansible_host'] }}:9100"
 {% endfor %}
         - "{{ hostvars['pve']['ansible_host'] }}:9100"
-        - "{{ hostvars['docker']['ansible_host'] }}:9100"
 
   - job_name: 'traefik'
     static_configs:
