--- a/templates/traefik-static.yml.j2
+++ b/templates/traefik-static.yml.j2
@@ -15,6 +15,8 @@ entryPoints:
   web-secure:
     address: :443
     http:
+      middlewares:
+        - authelia
       tls:
         options: default
   metrics:
