--- a/templates/mimir.yml.j2
+++ b/templates/mimir.yml.j2
@@ -5,34 +5,28 @@ common:
     backend: s3
     s3:
       endpoint: 127.0.0.1:9000
-      access_key_id: minioadmin
-      secret_access_key: minioadmin
-      bucket_name: mimir-bucket
+      access_key_id: "{{ prometheus_minio_root_user }}"
+      secret_access_key: "{{ prometheus_minio_root_password }}"
       insecure: true
+
+blocks_storage:
+  s3:
+    bucket_name: mimir-blocks
+
+alertmanager_storage:
+  s3:
+    bucket_name: mimir-alertmanager
+
+ruler_storage:
+  s3:
+    bucket_name: mimir-ruler
 
 compactor:
   data_dir: /tmp/mimir/compactor
-  sharding_ring:
-    kvstore:
-      store: memberlist
-
-distributor:
-  ring:
-    instance_addr: 127.0.0.1
-    kvstore:
-      store: memberlist
 
 ingester:
   ring:
-    instance_addr: 127.0.0.1
-    kvstore:
-      store: memberlist
     replication_factor: 1
-
-ruler_storage:
-  backend: filesystem
-  filesystem:
-    dir: /tmp/mimir/rules
 
 server:
   http_listen_port: 9009
@@ -41,3 +35,6 @@ server:
 store_gateway:
   sharding_ring:
     replication_factor: 1
+
+limits:
+  compactor_block_upload_enabled: true
