--- a/templates/prometheus.yml.j2
+++ b/templates/prometheus.yml.j2
@@ -2,6 +2,9 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
+remote_write:
+  - url: http://localhost:9009/api/v1/push
+
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
